<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RideShare-OZ</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="my_rides">My Rides</string>
    <string name="my_groups">My Groups</string>
    <string name="home">Home</string>
    <string name="options">Options</string>

    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google+</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="login_with_password">Login with Password</string>
    <string name="login_anonymously">Login Anonymously</string>

    <string name="notification_joinrequest_title">New join request in RideShare-OZ</string>
    <string name="notification_joinrequest_body">A user has requested to join your group in RideShare-OZ.</string>

    <string name="title_activity_maps">Map</string>
    <string name="address_hint">Jump to an address</string>
    <string name="submit">Submit</string>
    <string name="go">Go</string>
    <string name="departure">Departure Point</string>
    <string name="pickup">Pick-up point</string>
    <string name="arrival">Arrival Point</string>
    <string name="fixed">(fixed)</string>
    <string name="has_options">(click for options)</string>
    <string-array name="pin_options">
        <item>Set as departure point</item>
        <item>Set as pick-up point</item>
        <item>Set as arrival point</item>
        <item>Remove pin</item>
    </string-array>

    <string name="title_activity_signin">SigninActivity</string>
    <string name="title_activity_actionchoice">Choose an action</string>
    <string name="title_activity_choosetyperide">Type of rides</string>
    <string name="title_activity_joingroup">Join a group</string>
    <string name="title_activity_oneoffride">One-Off Ride</string>
    <string name="title_activity_regularride">Regular Ride</string>
    <string name="title_activity_choose_group_event">Choose a Group or Event</string>
    <string name="title_activity_joined_rides">My joined rides</string>
    <string name="title_activity_manage_my_rides">Manage my rides</string>
    <string name="title_activity_manage_my_groups">Manage my groups</string>
    <string name="title_activity_offered_rides">My offered rides</string>
    <string name="title_activity_profile">My profile</string>
    <string name="title_activity_to_rate_rides">Rides to rate</string>

    <string name="or">or</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="title_activity_oneoff_ride">Create a one-off ride</string>

    <string name="title_activity_regular_ride">Create a regular ride</string>
    <string name="title_activity_one_off_ride">Create a one-off ride</string>
    <string name="title_activity_personal_detail">Personal details</string>
    <string name="title_activity_managemyrides">Manage My Rides</string>
    <string name="title_activity_managemygroups">Manage My Groups Activity</string>
    <string name="title_activity_search_ride">Search Rides</string>
    <string name="title_activity_create_a_group">Create a group</string>

    <string name="clickForAgenda">Click for Agenda</string>
    <string name="title_activity_view_profile">Profile</string>
    <string name="title_activity_create_event">Create an event</string>
    <string name="title_activity_group_management_panel">Group Management Panel</string>
    <string name="title_activity_searchresult">SearchresultActivity</string>

</resources>
