<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.firebase.samples.logindemo.MainActivity"
    android:id="@+id/mennubarnubar">

    <!-- Home-->
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/home_icon"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <!-- My Profile-->
    <item
        android:id="@+id/my_profile"
        android:title="@string/my_profile"
        android:orderInCategory="50"
        app:showAsAction="never" />

    <!-- My Groups-->
    <item
        android:id="@+id/my_groups"
        android:title="@string/my_groups"
        android:icon="@drawable/group_icon"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />

    <!-- My Rides-->
    <item
        android:id="@+id/my_rides"
        android:title="@string/my_rides"
        android:icon="@drawable/car_icon"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <!-- Logout -->
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
